charts/freshrss/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: freshrss
spec:
  selector:
    app: freshrss
  ports:
    - port: 80
