charts/freshrss/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: freshrss
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: rss.koudijs.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  freshrss
                port:
                  number: 80
  tls:
    - secretName: freshrss-cert
      hosts:
        - rss.koudijs.me
